<resources>


    <!--key -->
    <string name="app_name">Fitzme</string>
    <string name="facebook_app_id">319701138900960</string>
    <string name="kakao_app_id">bfbef21de3e2c0aded7a9e2fb9c5ceb2</string>
    <string name="naver_app_id">v5t67QQ0klqdW_D9qqrh</string>
    <string name="naver_app_secret">kvUxJ3bXfq</string>
    <string name="provider_naver">naver</string>
    <string name="provider_facebook">facebook</string>
    <string name="provider_google">google</string>
    <string name="provider_kakao">kakao</string>


    <!--part category-->
    <string name="str_cate_top">상의</string>
    <string name="str_cate_bottom">하의</string>
    <string name="str_cate_outer">아우터</string>
    <string name="str_cate_dress">드레스</string>
    <string name="str_cate_shoes">슈즈</string>

    <string name="str_cate_sweater">상의 > 니트/스웨터</string>
    <string name="str_brand">브랜드&#160;&#160;&#160;&#160;</string>
    <string name="str_color">컬러&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="str_tag">태그&#160;&#160;&#160;&#160;&#160;&#160;</string>


    <!-- String -->
    <string name="str_email">이메일</string>
    <string name="str_category">카테고리</string>
    <string name="str_notice">공지사항</string>
    <string name="str_security">개인/보안</string>
    <string name="str_logout">로그아웃</string>
    <string name="str_shopping_info">쇼핑정보</string>
    <string name="str_shopping_title">바이시리즈</string>
    <string name="str_login">로그인</string>
    <string name="str_cancel">취소</string>
    <string name="str_signup_">회원가입</string>
    <string name="str_confirm">확인했습니다</string>
    <string name="str_calendar_go">달력보기</string>
    <string name="str_yes">네</string>
    <string name="str_no">아니오</string>
    <string name="str_password">비밀번호</string>
    <string name="str_pw_forget">비밀번호를 잊으셨나요?</string>
    <string name="str_sns_login_start">SNS계정으로 시작하기</string>
    <string name="str_start">시작하기</string>
    <string name="str_signup">지금 가입하러가기</string>
    <string name="str_auto_login">자동로그인</string>
    <string name="str_login_title">F O L L O W&#160;&#160;M E&#160;&#160;O N&#160;&#160;F I T Z M E</string>
    <string name="str_collection_title">오늘의 코디를 추천해드립니다.</string>
    <string name="str_collection_copyright">COPYRIGHT 2019. FITZME. ALL RIGHTS RESERVED.</string>
    <string name="str_collection_designby">DESIGN BY FITZME.</string>
    <string name="str_insta_signup">인스타그램으로 가입하기</string>
    <string name="str_kakao_signup">카카오 계정으로 가입하기</string>
    <string name="str_google_signup">구글 아이디 가입하기</string>
    <string name="str_facebook_signup">페이스북으로 계속하기</string>
    <string name="str_naver_signup">네이버 아이디로 로그인</string>
    <string name="str_gender">성별</string>
    <string name="str_sign_up_to_email">이메일로 회원가입하기</string>
    <string name="str_sign_up">회원가입하기</string>
    <string name="str_email_confirm">중복체크</string>


    <string name="str_dummy_id">a@a.com</string>
    <string name="str_dummy_pw">1234</string>
    <string name="str_email_signup">이메일로 회원가입 </string>>

    <!-- message -->
    <string name="msg_gender_select">성별을 선택해주세요.</string>
    <string name="msg_age_select">나이를 선택해주세요.</string>
    <string name="msg_add_calendar">해당 아이템을\n오늘 날짜 달력에 추가했습니다. </string>

    <string name="default_notification_channel_id">FITZME_DEFAULT_CHANNEL</string>
    <string name="title_activity_meal_insert">MealInsertActivity</string>

    <!-- Common Error -->

    <string name="error_e001">이메일 or 휴대폰번호가 중복입니다.</string>
    <string name="error_e002">사용자 정보를 확인하지 못하였습니다.</string>
    <string name="error">요청한 작업에 실패하였습니다.</string>
    <string name="error_else_retry">요청한 작업에 실패하였습니다. 재시도할까요?</string>
    <string name="error_try_catch_retry">에러입니다.\n재시도할까요?</string>


    <!-- fcm -->
    <string name="notification_id">fitzme_channel_id</string>
    <string name="notification_name">fitzme_channel_name</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->


    <string name="msg_push_emailAddress">이메일주소</string>
    <string name="msg_not_internet">인터넷이 연결되지 않았습니다.</string>
    <string name="msg_not_support_message">곧 제공될 기능입니다.</string>
    <string name="msg_weather_item_message">날씨에 맞게 내 옷장에 있는 아이템으로\n 코디를 조합합니다.</string>
    <string name="msg_quick_item_filter_empty">검색된 결과가 없습니다.</string>
    <string name="msg_quest_patch">최신버전으로 업데이트하시겠습니까?</string>
    <string name="msg_check_mobile_use_agree">3G/LTE등으로 재생시 \n데이터 사용로가 발생 할 수 있습니다</string>
    <string name="msg_check_profile_name">이름을 입력해주세요.</string>
    <string name="msg_input_not_space_name">이름에 빈 공간은 입력할 수 없습니다.</string>
    <string name="msg_check_profile_email">이메일을 입력해주세요.</string>
    <string name="msg_confirm_profile_email">이메일 형식을 확인해주세요.</string>
    <string name="msg_check_profile_password">비밀번호를 입력해주세요.</string>
    <string name="msg_check_current_password">현재 비밀번호를 입력해주세요.</string>
    <string name="msg_confirm_profile_password">비밀번호를 다시 확인해주세요.</string>
    <string name="msg_confirm_new_password">새로운 비밀번호를 확인해주세요.</string>
    <string name="msg_push_new_password">새로운 비밀번호를 입력해주세요.</string>
    <string name="msg_input_not_space_email">이메일에 빈 공간은 입력할 수 없습니다.</string>
    <string name="msg_input_not_space_password">패스워드에 빈 공간은 입력할 수 없습니다.</string>
    <string name="msg_back_button">\"뒤로\" 버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

</resources>
